--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/keithmifsud/type-script-money/issues"
   },
-  "homepage": "https://github.com/keithmifsud/type-script-money#readme"
+  "homepage": "https://github.com/keithmifsud/type-script-money#readme",
+  "devDependencies": {
+    "mocha": "^5.2.0"
+  }
 }
